<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConfiguracaoActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configuracao" />

    <CheckBox
        android:id="@+id/checkLigacaoForaAgenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="16dp"
        android:text="@string/bloquearLigacaoForaDaAgenda" />

    <CheckBox
        android:id="@+id/checkBlackList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkLigacaoForaAgenda" 
        android:layout_below="@+id/checkLigacaoForaAgenda"
        android:text="@string/bloquearBlackList" />

    <CheckBox
        android:id="@+id/checkSMSForaAgenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBlackList"
        android:layout_below="@+id/checkBlackList"
        android:text="@string/bloquearSMSForaDaAgenda" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkSMSForaAgenda"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/salvar"
        android:onClick="salvar" />

</RelativeLayout>